<resources>
    <string name="app_name">GoodVibrationsApp</string>
    <string name="title_new_message">New message</string>
    <string name="title_dashboard">Dictionary</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_settings">Settings</string>
    <string name="text_recipients">Recipients:</string>
    <string name="button_recipients">Alexander</string>
    <string name="button_title_tap_a_sequence_here">Tap a sequence here</string>
    <string name="title_send_message">Send message</string>
    <string name="activate_button">Activate Button</string>
    <string name="volume_down">Volume down</string>
    <string name="textview_contacts">Contacts</string>
    <string name="textview_contact_names">Alexander, Marie</string>
    <string name="new_message_alert">New Message Alert</string>
    <string name="logout">Log out</string>
    <string name="button_save_phrase">Save</string>
    <string name="message_history">Message History</string>
    <string name="alexander">Alexander</string>
    <string name="contact1_nr">0732445566</string>
    <string name="message_contacts">Contacts</string>
    <string name="fragment_contacts">Contacts</string>
    <string name="chris">Chris</string>
    <string name="contact2_nr">0735556677</string>
    <string name="qr_text">Scan QR code to add as contact</string>
    <string name="textview_vibration_strength">Vibration Strength</string>
</resources>