<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_mail"
        android:title="@string/title_new_message" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icon_dictionary"
        android:title="@string/title_dictionary" />

    <item
        android:id="@+id/message_history"
        android:icon="@drawable/icon_message"
        android:title="@string/message_history" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/icon_contacts"
        android:title="@string/message_contacts" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icon_settings"
        android:title="@string/title_settings" />

</menu>