<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.goodvibrationsapp.ui.send_message.SendMessageFragment"
        android:label="@string/title_new_message"
        tools:layout="@layout/fragment_send_message" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.goodvibrationsapp.ui.dashboard.DictionaryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
    android:id="@+id/navigation_notifications"
    android:name="com.example.goodvibrationsapp.ui.notifications.NotificationsFragment"
    android:label="@string/title_settings"
    tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/message_history"
        android:name="com.example.goodvibrationsapp.ui.message_history.MessageHistoryFragment"
        android:label="@string/message_history"
        tools:layout="@layout/message_history" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.goodvibrationsapp.ui.ContactsFragment"
        android:label="@string/fragment_contacts"
        tools:layout="@layout/fragment_contacts" />
</navigation>