<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.send_message.SendMessageFragment">

    <LinearLayout
        android:id="@+id/recipients_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_recipients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/text_recipients" />

        <Button
            android:id="@+id/button_recipients"
            style="@style/SimpleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_recipients"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/button_tap_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/button_tap"
        android:paddingEnd="@dimen/button_tap"
        android:paddingTop="@dimen/button_tap"
        android:paddingBottom="@dimen/button_tap"
        android:text="@string/button_title_tap_a_sequence_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipients_container" />

    <Button
        android:id="@+id/button_send_message"
        style="@style/SimpleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_send_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>
