<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:visibility="gone"
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    //List of settings. Each setting has its own linear layout that is it's row.
    <LinearLayout
        android:id="@+id/list_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        //Mode row
        <LinearLayout
            android:id="@+id/mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        </LinearLayout>

        //New message alert row
        <LinearLayout
            android:id="@+id/new_message_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/line_padding">

            <TextView
                android:id="@+id/textview_new_message_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_message_alert"
                style="@style/TextBold"/>

            <Switch
                android:id="@+id/switch_new_message_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Switch"
                android:gravity="end"/>


        </LinearLayout>

        //Contacts row
        <LinearLayout
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/line_padding">

            <TextView
                android:id="@+id/textView_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_contacts"
                style="@style/TextBold"/>

            <TextView
                android:id="@+id/textView_contact_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_contact_names"
                style="@style/TextNormal"
                android:gravity="end" />
        </LinearLayout>

        //Activate button row
        <LinearLayout
            android:id="@+id/activate_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/line_padding">

            <TextView
                android:id="@+id/textview_activate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activate_button"
                android:gravity="start"
                style="@style/TextBold"/>

            <TextView
                android:id="@+id/textview_volume_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/volume_down"
                android:gravity="end"
                style="@style/TextNormal"/>
        </LinearLayout>

    </LinearLayout>

    //Logout
    <TextView
        android:id="@+id/textview_logout"
        style="@style/TextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/logout"
        android:paddingBottom="@dimen/big_padding"
        android:paddingStart="@dimen/line_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>